--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshop_project</title>
-    <link rel="stylesheet" href="../Web/css/style.css" />
+    <link rel="stylesheet" href="./Web/css/style.css" />
   </head>
   <body>
     <p class="basliq">Kitab mağazası</p>
@@ -42,6 +42,15 @@
         səs-küyündən, yağışından-küləyindən “gizlənirsən".
       <br>
       </span>
+
+<div class="daire"></div>
+<div class="daire"></div>
+<div class="daire"></div>
+<div class="daire"></div>
+<div class="daire"></div>
+<div class="daire"></div>
+
+
     </main>
  <input type="button" value="Kitab kəşf et">
     <p class="kitablar"> <b> Kitablar</b></p>
