--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <main>
-      <img src="../Web/şəkillər/kitab.svg" alt="" />
+      <img src="./Web/şəkillər/kitabliq.svg" alt="" />
       <span class="paraqraf">
         Çoxları hesab edir ki, yay tətilini kitabsız təsəvvür etmək
         qeyri-mümkündür. Amma məncə əksinə, məhz payız əsl mütaliə
